--- a/src/css/link.css
+++ b/src/css/link.css
@@ -10,7 +10,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: var(--lake-z-index-popup);
   border: 1px solid var(--lake-border-color);
   border-radius: 5px;
   padding: 16px;
