--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: var(--lake-z-index-popup);
   list-style: none;
   border: 1px solid var(--lake-border-color);
   border-radius: 5px;
